# nii2dcm

./: README.md  imageType.txt  requirements.txt  setup.cfg  setup.py
nii2dcm/: __main__.py  _version.py  dcm.py  dcm_writer.py  nii.py  run.py
nii2dcm.egg-info/: requires.txt
nii2dcm/modules/: ct_image.py  patient.py
