[metadata]
name = nii2dcm
version = attr: nii2dcm.__init__.__version__
description= nii2dcm: NIfTI to DICOM creation with Python
url = https://github.com/oncowonyoungcho/nii2dcm
author = Tom Roberts
author_email = t.roberts@kcl.ac.uk
long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = find:
# python_requires = <3.11
install_requires =
    numpy
    matplotlib
    nibabel
    pydicom
    twine
    dunamai
include_package_data=True

[options.entry_points]
console_scripts =
    nii2dcm = nii2dcm.__main__:cli
